# pkgrip

./: .gitignore  Makefile  README.md  meson.build  pkgrip  pkgrip.c  pkgrip.d
.github/workflows/: release.yml
libkirk/: aes.c  aes.d  amctrl.c  amctrl.d  bn.d  ec.c  ec.d  kirk_engine.d  sha1.c  sha1.d
src/: pkgrip
